--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href="http://techinfo.vip/TechNotes/";</script>
+<script type="text/javascript">window.location.href="http://jianpenglin.github.io/TechNotes/";</script>
